# gtk-opencv-patterns

./: .gitignore  .vimrc  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/cpp/: camera-drawing-area.cpp  main-window.cpp  main.cpp  service-locator.cpp
src/app/hpp/: camera-drawing-area.hpp  main-window.hpp  service-locator.hpp
src/app/res/: MacOSXBundleInfo.plist.in
src/lib/: CMakeLists.txt
src/lib/cpp/: capture-image-from-camera.cpp  movie-maker.cpp  orange-ball-detector.cpp  rate-meter.cpp  system-helper-nix.cpp  system-helper-windows.cpp  system-helper.cpp
src/lib/hpp/: capture-image-from-camera.hpp  event-bus.hpp  movie-maker.hpp  orange-ball-detector.hpp  rate-meter.hpp  system-helper.hpp
src/lib/tst/: CMakeLists.txt  event-bus-test.cpp  movie-maker-test.cpp  orange-ball-detector-test.cpp  rate-meter-test.cpp  system-helper-test.cpp  test-config.h.in
